--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter:
     sdk: flutter
   glassmorphism_widgets: 0.2.2
+  firebase_core: 3.9.0
+  firebase_auth: 5.3.4
 
 
   
